# lemmy

./: Cargo.toml  README.md
config/: defaults.hjson
crates/api_common/src/: request.rs
crates/routes/src/: lib.rs  nodeinfo.rs
crates/utils/src/: lib.rs
crates/utils/src/settings/: structs.rs
docker/: Dockerfile  Dockerfile.api  Dockerfile.federation  Dockerfile.scheduler  docker-compose.yml  docker_update.sh  lemmy.hjson  nginx.conf  test_deploy.sh
docs/: breaking_the_monolith.md  readme.md
services/api_service/: Cargo.toml
services/api_service/config/: config.hjson  defaults.hjson
services/api_service/crates/api/: Cargo.toml
services/api_service/crates/api/src/site/: leave_admin.rs
services/api_service/crates/api_crud/: Cargo.toml
services/api_service/crates/api_crud/src/site/: read.rs
services/api_service/crates/version/: Cargo.toml
services/api_service/docker/: Dockerfile
services/api_service/src/: lib.rs  main.rs  nodeinfo.rs  routes.rs
services/api_service/src/protocol/collections/: empty_outbox.rs  group_followers.rs
services/api_service/src/protocol/objects/: mod.rs  tombstone.rs
services/federation_service/: Cargo.toml
services/federation_service/config/: config.hjson  defaults.hjson
services/federation_service/docker/: Dockerfile
services/federation_service/src/: lib.rs  main.rs
services/scheduler_service/: Cargo.toml
services/scheduler_service/config/: config.hjson
services/scheduler_service/src/: main.rs
src/: lib.rs  scheduled_tasks.rs
