[workspace.package]
version = "0.18.1"
edition = "2021"
description = "A link aggregator for the fediverse - Api Service"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
repository = "https://github.com/LemmyNet/lemmy"

[package]
name = "api_service"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "api_service"
path = "src/lib.rs"
doctest = false

[features]
console = [
  "console-subscriber",
  "opentelemetry",
  "opentelemetry-otlp",
  "tracing-opentelemetry",
  "reqwest-tracing/opentelemetry_0_16",
]
json-log = ["tracing-subscriber/json"]
prometheus-metrics = ["prometheus", "actix-web-prom"]
default = []

[profile.release]
debug = 0
lto = "thin"

# This profile significantly speeds up build time. If debug info is needed you can comment the line
# out temporarily, but make sure to leave this in the main branch.
[profile.dev]
debug = 0

[workspace.dependencies]
lemmy_utils = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", branch = "break-api-and-federation-out-of-lemmy" }
lemmy_db_schema = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"], branch = "break-api-and-federation-out-of-lemmy" }
lemmy_db_views = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"], branch = "break-api-and-federation-out-of-lemmy" }
lemmy_db_views_moderator = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"], branch = "break-api-and-federation-out-of-lemmy" }
lemmy_db_views_actor = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"], branch = "break-api-and-federation-out-of-lemmy" }
lemmy_api = { version = "=0.18.1", path="./crates/api" }
lemmy_api_common = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", branch = "break-api-and-federation-out-of-lemmy" }
lemmy_api_crud = { version = "=0.18.1", path="./crates/api_crud" }
lemmy_version = { version = "=0.18.1", path="./crates/version" }
activitypub_federation = { version = "0.4.5", default-features = false, features = [
  "actix-web",
] }
bcrypt = "0.15.0"
base64 = "0.21.2"
serde = { version = "1.0.167", features = ["derive"] }
actix-web = { version = "4.3.1", default-features = false, features = [
  "macros",
  "rustls",
  "compress-brotli",
  "compress-gzip",
  "compress-zstd",
] }
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }
async-trait = "0.1.71"
anyhow = { version = "1.0.71", features = [
  "backtrace",
] } #
captcha = "0.0.9"
chrono = { version = "0.4.26", features = ["serde"], default-features = false }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
serial_test = "2.0.0"
tokio = { version = "1.29.1", features = ["full"] }

[dependencies]
lemmy_utils = { workspace = true }
lemmy_db_schema = { workspace = true }
lemmy_db_views = { workspace = true }
lemmy_db_views_moderator = { workspace = true }
lemmy_db_views_actor = { workspace = true }
lemmy_api = { workspace = true }
lemmy_api_common = { workspace = true }
lemmy_api_crud = { workspace = true }
lemmy_version = { workspace = true }
lemmy_routes = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", branch = "break-api-and-federation-out-of-lemmy" }
activitypub_federation = { workspace = true }
bcrypt = { workspace = true }
diesel = "2.1.0"
base64 = { workspace = true }
chrono = { workspace = true }
captcha = { workspace = true }
anyhow = { workspace = true }
serde_json = { version = "1.0.100", features = ["preserve_order"] }
serde = { workspace = true }
actix-web = { workspace = true }
actix-cors = "0.6.4"
tokio = { workspace = true }
tracing = { workspace = true }
serial_test = { workspace = true }
tracing-actix-web = { version = "0.7.5", default-features = false }
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
strum_macros = "0.25.1"
url = { workspace = true }
http = "0.2.9"
futures = "0.3.28"
itertools = "0.11.0"
uuid = { workspace = true }
sha2 = "0.10.7"
async-trait = { workspace = true }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
reqwest-middleware = "0.2.2"
reqwest-tracing = "0.4.5"
once_cell = "1.18.0"
html2md = "0.2.14"
serde_with = "3.0.0"
enum_delegate = "0.2.0"
moka = { version = "0.11", features = ["future"] }
console-subscriber = { version = "0.1.10", optional = true }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.12.0", optional = true }
tracing-opentelemetry = { version = "0.19.0", optional = true }
prometheus = { version = "0.13.3", features = ["process"], optional = true }
actix-web-prom = { version = "0.6.0", optional = true }

[dev-dependencies]
task-local-extensions = "0.1.4"
assert-json-diff = "2.0.2"
tokio = { workspace = true }

[workspace]
members = [
  "./crates/api",
  "./crates/api_crud",
  "./crates/version"
]
