[package]
name = "federation_service"
version = "0.18.1"
edition = "2021"
description = "A link aggregator for the fediverse - ActivityPub Federation Service"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
repository = "https://github.com/LemmyNet/lemmy"

[lib]
name = "federation_service"
path = "src/lib.rs"
doctest = false

[features]
console = [
  "console-subscriber",
  "opentelemetry",
  "opentelemetry-otlp",
  "tracing-opentelemetry",
  "reqwest-tracing/opentelemetry_0_16",
]
json-log = ["tracing-subscriber/json"]
default = []

[profile.release]
debug = 0
lto = "thin"

# This profile significantly speeds up build time. If debug info is needed you can comment the line
# out temporarily, but make sure to leave this in the main branch.
[profile.dev]
debug = 0

[dependencies]
lemmy_utils = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git" }
lemmy_db_schema = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"]  }
lemmy_db_views = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"]  }
lemmy_db_views_actor = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"]  }
lemmy_api_common = { version = "=0.18.1", git="https://github.com/shiftcollective-org/lemmy.git", features = ["full"]  }
activitypub_federation = { version = "0.4.5", default-features = false, features = [
  "actix-web",
] }
diesel = "2.1.0"
chrono = { version = "0.4.26", features = ["serde"], default-features = false }
serde_json = { version = "1.0.100", features = ["preserve_order"] }
serde = { version = "1.0.167", features = ["derive"] }
actix-web = { version = "4.3.1", default-features = false, features = [
  "macros",
  "rustls",
  "compress-brotli",
  "compress-gzip",
  "compress-zstd",
] }
actix-cors = "0.6.4"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.5", default-features = false }
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
strum_macros = "0.25.1"
url = { version = "2.4.0", features = ["serde"] }
http = "0.2.9"
futures = "0.3.28"
itertools = "0.11.0"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
sha2 = "0.10.7"
async-trait = "0.1.71"
anyhow = { version = "1.0.71", features = [
  "backtrace",
] } # backtrace is on by default on nightly, but not stable rust
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
reqwest-middleware = "0.2.2"
reqwest-tracing = "0.4.5"
once_cell = "1.18.0"
html2md = "0.2.14"
serde_with = "3.0.0"
enum_delegate = "0.2.0"
moka = { version = "0.11", features = ["future"] }
console-subscriber = { version = "0.1.10", optional = true }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.12.0", optional = true }
tracing-opentelemetry = { version = "0.19.0", optional = true }

[dev-dependencies]
serial_test = "2.0.0"
task-local-extensions = "0.1.4"
assert-json-diff = "2.0.2"

[workspace]
